kubernetes/istio/istio-gatewayVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gameon-core
  namespace: gameon-system
spec:
  gateways:
  - gameon-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: auth.gameon-system.svc.cluster.local
  - match:
    - uri:
        prefix: /map
    route:
    - destination:
        host: map.gameon-system.svc.cluster.local
  - websocketUpgrade: true
    match:
    - uri:
        prefix: /mediator/ws
    route:
    - destination:
        host: mediator.gameon-system.svc.cluster.local
  - match:
    - uri:
        prefix: /mediator
    route:
    - destination:
        host: mediator.gameon-system.svc.cluster.local
  - match:
    - uri:
        prefix: /players
    route:
    - destination:
        host: player.gameon-system.svc.cluster.local
  - websocketUpgrade: true
    match:
    - uri:
        prefix: /rooms/ws
    route:
    - destination:
        host: room.gameon-system.svc.cluster.local
  - match:
    - uri:
        prefix: /rooms
    route:
    - destination:
        host: room.gameon-system.svc.cluster.local
  - match:
    - uri:
        prefix: /swagger
    route:
    - destination:
        host: swagger.gameon-system.svc.cluster.local
  - route:
    - destination:
        host: webapp.gameon-system.svc.cluster.local
